---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    -
  Bugfixes:
    - Fixed that the dimming overlay would be stuck in front of the main window, blocking any interaction with it (at least I hope it's fixed)

---------------------------------------------------------------------------------------------------
Version: 1.1.19
Date: 10. 02. 2021
  Changes:
    - Made it so the 'to the top' button can be used starting at level 2 floors, instead of level 3
  Bugfixes:
    - Fixed a couple of issues where the mod would not properly select a machine for a recipe in some situations
    - Fixed an issue where some modal dialogs might not work correctly after reloading a save
    - Fixed that the last valid modset data would not be retained when importing an invalid subfactory
    - Fixed that alt-clicking a default machine in preferences could crash in certain cases
    - Fixed that trying to handcraft a module or beacon in the utilities dialog would crash
    - Fixed a crash when attempting to craft using the utility dialog while not having a character associated to yourself
    - Fixed that attempting to handcraft in the utility dialog would sometimes incorrectly show a warning about there not being enough resources while simultaneously queueing some crafting
    - Fixed that the background dimming when the game is paused would duplicate itself when alt-tabbing or resizing the window

---------------------------------------------------------------------------------------------------
Version: 1.1.18
Date: 01. 02. 2021
  Changes:
    - Moved the matrix solver toggle to the subfactory info box
    - Added proper error messages to handcrafting machines and modules in the utility dialog
    - Reworded some of the mod setting names as they were awful
  Bugfixes:
    - Fixed a crash when typing into or confirming the export dialog textfield