@@ -7,6 +7,7 @@ Date: 00. 00. 0000
     -
   Bugfixes:
     - Fixed that the dimming overlay would be stuck in front of the main window, blocking any interaction with it (at least I hope it's fixed)
+    - Fixed that the background dimmer would be incorrectly sized on display scales other than 100%
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.19
